Cssをつくったよ
Add basic styles for headings and paragraphs

--- a/aaaaaaa.css
+++ b/aaaaaaa.css
@@ -1,1 +1,13 @@
+/* aaaaaa.css */
 
+h1 {
+  font-size: 2em; /* 例: 基本フォントサイズの2倍 */
+}
+
+h2 {
+  font-size: 1.5em; /* 例: 基本フォントサイズの1.5倍 */
+}
+
+p {
+  font-size: 1em; /* 例: 基本フォントサイズ（標準） */
+}
